language/move-lang/tests/move_check/typing/constraints_not_satisfied_all_cases.exp
error[E05001]: ability constraint not satisfied
  ┌─ tests/move_check/typing/constraints_not_satisfied_all_cases.move:7:29
  │
3 │     struct CupC<T: copy> { f: T }
  │                    ---- 'copy' constraint declared here
  ·
7 │     fun no_constraint<T>(c: CupC<T>, r: CupR<T>) {}
  │                       -     ^^^^^^^
  │                       │     │    │
  │                       │     │    The type 'T' does not have the ability 'copy'
  │                       │     'copy' constraint not satisifed
  │                       To satisfy the constraint, the 'copy' ability would need to be added here

error[E05001]: ability constraint not satisfied
  ┌─ tests/move_check/typing/constraints_not_satisfied_all_cases.move:7:41
  │
2 │     struct CupR<T: key> { f: T }
  │                    --- 'key' constraint declared here
  ·
7 │     fun no_constraint<T>(c: CupC<T>, r: CupR<T>) {}
  │                       -                 ^^^^^^^
  │                       │                 │    │
  │                       │                 │    The type 'T' does not have the ability 'key'
  │                       │                 'key' constraint not satisifed
  │                       To satisfy the constraint, the 'key' ability would need to be added here

error[E05001]: ability constraint not satisfied
  ┌─ tests/move_check/typing/constraints_not_satisfied_all_cases.move:9:31
  │
3 │     struct CupC<T: copy> { f: T }
  │                    ---- 'copy' constraint declared here
  ·
9 │     fun t_resource<T: key>(c: CupC<T>, r: CupR<T>) {}
  │                    -          ^^^^^^^
  │                    │          │    │
  │                    │          │    The type 'T' does not have the ability 'copy'
  │                    │          'copy' constraint not satisifed
  │                    To satisfy the constraint, the 'copy' ability would need to be added here

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/constraints_not_satisfied_all_cases.move:11:44
   │
 2 │     struct CupR<T: key> { f: T }
   │                    --- 'key' constraint declared here
   ·
11 │     fun t_copyable<T: copy>(c: CupC<T>, r: CupR<T>) {}
   │                    -                       ^^^^^^^
   │                    │                       │    │
   │                    │                       │    The type 'T' does not have the ability 'key'
   │                    │                       'key' constraint not satisifed
   │                    To satisfy the constraint, the 'key' ability would need to be added here

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/constraints_not_satisfied_all_cases.move:13:14
   │
 3 │     struct CupC<T: copy> { f: T }
   │                    ---- 'copy' constraint declared here
 4 │     struct R has key {}
   │            - To satisfy the constraint, the 'copy' ability would need to be added here
   ·
13 │     fun r(c: CupC<R>, r: CupR<R>) {}
   │              ^^^^^^^
   │              │    │
   │              │    The type '0x8675309::M::R' does not have the ability 'copy'
   │              'copy' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/constraints_not_satisfied_all_cases.move:15:26
   │
 2 │     struct CupR<T: key> { f: T }
   │                    --- 'key' constraint declared here
   ·
 5 │     struct C has copy {}
   │            - To satisfy the constraint, the 'key' ability would need to be added here
   ·
15 │     fun c(c: CupC<C>, r: CupR<C>) {}
   │                          ^^^^^^^
   │                          │    │
   │                          │    The type '0x8675309::M::C' does not have the ability 'key'
   │                          'key' constraint not satisifed

